Added correct licence string in composer

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "macroman/terminal-progress-bar",
     "description": "Flexible ascii progress bar.",
+    "version": "0.1.6",
     "type": "library",
     "homepage": "https://github.com/MacroMan/PHPTerminalProgressBar",
-    "license": "GNU GPLv3",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "David Wakelin",
